2004-10-13  Nate Nielsen <nielsen@memberwebs.com>
	
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-signatures.c: Use a hashtable to speed lookups
	of keys to SeahorseKeys
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-recipients.c:
	* src/seahorse-process-multiple.c: Proper use of ngettext
	* bonobo/Seahorse_PGP_File_Listener.server.in:
	* bonobo/seahorse-pgp-file-listener.c:
	* libseahorse/seahorse-libdialogs.h:
	* libseahorse/seahorse-op.c:
	* libseahorse/seahorse-op.h:
	* libseahorse/seahorse-signatures.c:
	* libseahorse/seahorse-signatures.glade:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* src/main.c:
	* src/Makefile.am:
	* src/seahorse-multi-encrypt.glade:
	* src/seahorse-process-multiple.c:
	* src/seahorse-windows.h: Multiple file support in nautilus including
	packaging (bug# 111118)
	* src/Makefile.am: Include neccessary druid headers 
	* bonobo/Seahorse_PGP_File_Listener.server.in:
	* plugins/nautilus/Makefile.am: 
	* plugins/nautilus/seahorse.xml:
	* seahorse.spec.in: Added proper support for nautilus mime types
	* libseahorse/seahorse-libdialogs.h:
	* libseahorse/seahorse-passphrase.c:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* src/seahorse-key-op.c: Fixed inbuilt (non-agent) password prompting 
	which has been broken since GPGME upgrade
	* libseahorse/seahorse-key.c:
	* libseahorse/seahorse-key.h: Added functions for retrieving user ids
	* libseahorse/seahorse-context.c: Load signatures when loading keys
	* libseahorse/seahorse-key-op.c:
	* libseahorse/seahorse-key-op.h: Added key operations for changing 
	primary user id, and deleting a user id
	
2004-10-12	Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-key-store.c: Proper listing of keys when the keys
	have already been enumerated and loaded
	* libseahorse/seahorse-context.c: 