@@ -1,5 +1,7 @@
 2004-10-13  Nate Nielsen <nielsen@memberwebs.com>
 	
+	* libseahorse/seahorse-key-store.c: Now respects 'encrypt to self' 
+	option (bug# 111899)
 	* libseahorse/seahorse-context.c:
 	* libseahorse/seahorse-context.h:
 	* libseahorse/seahorse-signatures.c: Use a hashtable to speed lookups
